--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,26 +1,92 @@
-nav{
-    background-color: lightgray;
+nav {
+  background-color: lightgray;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-inline: 40px;
+  padding-block: 15px;
+  color: black;
+
+  .logo {
+    font-size: 30px;
+    font-weight: 600;
+  }
+
+  ul {
     display: flex;
-    align-items: center;
+    width: 30%;
+    font-size: 20px;
+    justify-content: space-evenly;
+
+    li {
+      list-style: none;
+      color: black;
+    }
+  }
+}
+
+.signCard {
+  width: 100%;
+  height: calc(100vh - 80px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px 40px;
+    height: auto;
+    width: 40%;
+
+    input {
+      border: none;
+      padding: 15px 10px;
+      border-radius: 10px;
+      font-size: 15px;
+      background-color: lightgray;
+    }
+
+    button {
+      border: none;
+      padding: 12px 10px;
+      border-radius: 10px;
+      font-size: 20px;
+      text-transform: uppercase;
+      background-color: slategray;
+      color: white;
+      cursor: pointer;
+      transition: all 1s cubic-bezier(0.19, 1, 0.22, 1);
+
+      &:hover {
+        background-color: rgba(112, 128, 144, 0.612);
+      }
+    }
+    a {
+      text-decoration: none;
+      padding: 12px 10px;
+      border-radius: 10px;
+      background-color: rgba(200, 22, 22, 0.801);
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 20px;
+      cursor: pointer;
+      color: white;
+      text-transform: uppercase;
+      transition: all 1s cubic-bezier(0.19, 1, 0.22, 1);
+      &:hover {
+        background-color: rgba(200, 22, 22, 0.438);
+      }
+    }
+  }
+  .info {
+    display: flex;
+    width: 30%;
+    padding: 5px 10px;
     justify-content: space-between;
-    padding-inline: 40px ;
-    padding-block: 15px;
-    color: black;
-
-    .logo{
-        font-size: 30px;
-        font-weight: 600;
-    }
-
-    ul{
-        display: flex;
-        width: 30%;
-        font-size: 20px;
-        justify-content: space-evenly;
-
-        li{
-            list-style: none;
-            color: black;
-        }
-    }
+  }
 }
