--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,6 +26,7 @@ nav {
 }
 
 .signCard {
+
   width: 100%;
   height: calc(100vh - 80px);
   display: flex;
@@ -61,6 +62,7 @@ nav {
       transition: all 1s cubic-bezier(0.19, 1, 0.22, 1);
 
       &:hover {
+        color: black;
         background-color: rgba(112, 128, 144, 0.612);
       }
     }
@@ -79,6 +81,7 @@ nav {
       text-transform: uppercase;
       transition: all 1s cubic-bezier(0.19, 1, 0.22, 1);
       &:hover {
+        color: black;
         background-color: rgba(200, 22, 22, 0.438);
       }
     }
@@ -88,5 +91,8 @@ nav {
     width: 30%;
     padding: 5px 10px;
     justify-content: space-between;
+  }
+  .error{
+    color: red;
   }
 }
