--- a/client/src/App.css
+++ b/client/src/App.css
@@ -66,7 +66,7 @@ nav {
         background-color: rgba(112, 128, 144, 0.612);
       }
     }
-    a {
+    .google {
       text-decoration: none;
       padding: 12px 10px;
       border-radius: 10px;
